--- a/Culinária/index.html
+++ b/Culinária/index.html
@@ -7,6 +7,66 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <img src="img/logo.png" class="logo" alt="logo">
+        </div>
+        <nav class="menu">
+            <a href="">RECEITAS</a>
+            <a href="">BLOG</a>
+        </nav>
+    </header>
+    <img src="img/fundo.png" alt="" class="fundo">
+    <h2>COMIDAS SAUDÁVEIS</h2>
+    <p class="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod veniam, aut, iste nam explicabo velit corrupti rem aliquam commodi expedita reiciendis perspiciatis voluptatibus. Dolores similique quis ex itaque fugiat molestiae!</p>
+
+    <h2 class="receitas">APRENDA RECEITAS</h2>
+    <div class="informações1">
+        <div class="inf1">
+        <img src="img/bolo-icone.png" alt="icone de bolo" class="bolo">
+        <div class="inf">
+        <h4>BOLO</h4>
+        <p class="textinho">BOLO DE MAÇÃ COM NOZES</p>
+        </div>
+        </div>
+
+        <div class="inf2">
+        <img src="img/pao-icone.png" alt="icone de pão" class="pão">
+        <div class="inf">
+        <h4>PÃO</h4>
+        <p class="textinho">PÃO INTEGRAL DE AVEIA</p></div>
+        </div>
+    </div>
+
+    <div class="informações2">
+        <div class="inf3">
+        <img src="img/frango-icone.png" alt="icone de frango" class="frango">
+        <div class="inf">
+        <h4>FRANGO</h4>
+        <p class="textinho">FILE DE FRANGO COM LEGUMES</p></div>
+        </div>
+
+        <div class="inf4">
+        <img src="img/peixe-icone.png" alt="icone de peixe" class="peixe">
+        <div class="inf">
+        <h4>PEIXE</h4>
+        <p class="textinho">PEIXE LIGHT AO FORNO</p></div>
+        </div>
+    </div>
+
+    <hr class="linha">
+
+    <h2 class="blog">BLOG</h2>
+    <div class="infBlog">
+    <img src="img/chef.png" alt="perfil" class="perfil">
+
+    <div>
+    <h3>NOVA RECEITA SAUDÁVEL</h3>
+    <p>SANDUICHE SAUDÁVEL DE FRANGO TEMPERADO</p></div>
+    </div>
+
+    <footer>
+        <img src="img/logo.png" alt="logo" class="logo2">
+    </footer>
 </body>
 </html>
