--- a/Culinária/index.html
+++ b/Culinária/index.html
@@ -60,9 +60,9 @@
     <div class="infBlog">
     <img src="img/chef.png" alt="perfil" class="perfil">
 
-    <div>
+    <div class="resumoPerfil">
     <h3>NOVA RECEITA SAUDÁVEL</h3>
-    <p>SANDUICHE SAUDÁVEL DE FRANGO TEMPERADO</p></div>
+    <p class="resumo">SANDUICHE SAUDÁVEL DE FRANGO TEMPERADO</p></div>
     </div>
 
     <footer>
