--- a/Viagem/index.html
+++ b/Viagem/index.html
@@ -15,33 +15,32 @@
             (11) 99999-9999
         </p>
     </header>
-    <h2 class="inicio">SEU SONHO A UM CLIQUE DE DISTÂNCIA</h2>
-
-    <h2>CONFIRA NOSSOS PACOTES DE VIAGEM</h2>
+    <div class="inicio">
+        <h2 class="slogan">SEU SONHO A UM CLIQUE DE DISTÂNCIA</h2>
+    </div>
+>
+    <h2 class="pacotes">CONFIRA NOSSOS PACOTES DE VIAGEM</h2>
     <div class="informações">
         <div class="inf1">
-            <img src="img/londres.png" alt="">
-            <p>LONDRES</p>
-            <p>10x</p>
-            <p>R$300.00</p>
+            <div><img src="img/londres.png" alt="" class="londres"></div>
+            <p class="londresTitulo">LONDRES</p>
+            <p class="preço"><span class="promoção">10x</span> R$300.00 </p>
         </div>
 
         <div class="inf2">
-            <img src="img/rio.png" alt="">
-            <p>RIO DE JANEIRO</p>
-            <p>10x</p>
-            <p>R$40.00</p>
+            <div><img src="img/rio.png" alt="" class="rio"></div>
+            <p class="rioTitulo">RIO DE JANEIRO</p>
+            <p class="preço"><span class="promoção">10x</span> R$40.00</p>
         </div>
 
         <div class="inf3">
-            <img src="img/japao.png" alt="">
-            <p>JAPÃO</p>
-            <p>10x</p>
-            <p>R$650.00</p>
+            <div><img src="img/japao.png" alt="" class="japão"></div>
+            <p class="japãoTitulo">JAPÃO</p>
+            <p class="preço"><span class="promoção">10x</span> R$650.00</p>
         </div>
     </div>
 
-    <h2>NÃO PERCA ESSA OPORTUNIDADE</h2>
+    <h2 class="oportunidade">NÃO PERCA ESSA OPORTUNIDADE</h2>
 
     <footer>
         <h1>TOUR VIAGENS - SUA MELHOR ESCOLHA</h1>
